--- a/index.html
+++ b/index.html
@@ -68,10 +68,30 @@
                 <div class="reviews__item">
                     <img class="reviews__photo" src="./images/photo.jpg" alt="avatar">
                     <div class="reviews__text">
-                        <h1 class='reviews__text-title'>1927 - первое упоминание</h1>
+                        <h1 class='reviews__text-title'>1928</h1>
+                        <p class='reviews__text-description'>
+                            <br>Этот завод в 1937 году решением Управления Химпрома Наркомлеспрома СССР передан в состав вновь построенного здесь в 1934 – 1936гг. завода «Изоплит».<br><br>Согласно дополнительных архивных данных на территории мыльной артели, принадлежащей частному предпринимателю, входящей в состав «Сампромсоюза», начинается строительство канифольного завода по проекту известного инженера, специалиста канифольного дела, частного собственника Вильнера И. Не успев начать строительство он трагически погиб.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="reviews__item">
+                    <img class="reviews__photo" src="./images/photo.jpg" alt="avatar">
+                    <div class="reviews__text">
+                        <h1 class='reviews__text-title'>1929</h1>
+                        <p class='reviews__text-description'>
+                            <br>Этот завод в 1937 году решением Управления Химпрома Наркомлеспрома СССР передан в состав вновь построенного здесь в 1934 – 1936гг. завода «Изоплит».
+                        </p>
+                    </div>
+                </div>
+
+                <div class="reviews__item">
+                    <img class="reviews__photo" src="./images/photo.jpg" alt="avatar">
+                    <div class="reviews__text">
+                        <h2 class='reviews__text-title'>1930</h2>
                         <p class='reviews__text-description'>
                             Первое упоминание в архивных данных о предприятии было в 1927 году.<br>
-                            <br>Этот завод в 1937 году решением Управления Химпрома Наркомлеспрома СССР передан в состав вновь построенного здесь в 1934 – 1936гг. завода «Изоплит».<br><br>Первым директором и начальником строительства предприятия был Корсаков Василий Тихонович.<br><br>Согласно дополнительных архивных данных на территории мыльной артели, принадлежащей частному предпринимателю, входящей в состав «Сампромсоюза», начинается строительство канифольного завода по проекту известного инженера, специалиста канифольного дела, частного собственника Вильнера И. Не успев начать строительство он трагически погиб.<br><br>Строительством продолжил заниматься его сын – специалист-химик Вильнер И., вызванный Кусто-Союзом из Москвы.
+                            <br>Этот завод в 1937 году решением Управления Химпрома Наркомлеспрома СССР передан в состав вновь построенного здесь в 1934 – 1936гг. завода «Изоплит».<br><br>Первым директором и начальником строительства предприятия был Корсаков Василий Тихонович.
                         </p>
                     </div>
                 </div>
