--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="reviews__text">
                         <h2 class='reviews__text-title'>1930</h2>
                         <p class='reviews__text-description'>
-                            С уходом Качановского И.Б. на должность директора секретарем п/ячейки избирается Пожарин, а председателем завкома – Барков. Качановский – делегат 1-й партконференции. Давыдович направляется на учебу в институт им. Плеханова. В 1932 году принято решение о реконструкции Новобелицкого канифольно-мыльного завода – страна нуждается в его продукции. И вот в течение 9-ти месяцев 1933 года идет работа по замене оборудования и внедрению новой технологии по методу инженера Курыгина, позволившего увеличить выработку готовой продукции в 4 – 6 раз, так докладывал на партсобрании 03.09.1933г. директор завода Патоцкий Хаим Шмулевич.
+                            С уходом Качановского И.Б. на должность директора секретарем п/ячейки избирается Пожарин, а председателем завкома – Барков. Качановский – делегат 1-й партконференции. Давыдович направляется на учебу в институт им. Плеханова. В 1932 году принято решение о реконструкции Новобелицкого канифольно-мыльного завода – страна нуждается в его продукции. И вот в течение 9-ти месяцев 1933 года идет работа по замене оборудования и внедрению новой технологии по методу инженера Курыгина, позволившего увеличить выработку готовой продукции в 4 – 6 раз, так докладывал на партсобрании 03.09.1933г. директор завода Патоцкий Хаим Шмулевич. Объединен с мыльной артелью и завод назван Новобелицкий канифольно-мыльный, который в 1941 году был разрушен и не восстанавливался.
                         </p>
                     </div>
                 </div>
